fix collapsed menu

--- a/styles/header.css
+++ b/styles/header.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 1130px;
-    padding-top: 38px;
+    padding: 38px 0 60px;
     background: url('../images/header-background.jpg') no-repeat center/cover;
 }
 
@@ -16,7 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 76px;
+    margin-top: 83px;
 }
 
 .header__data {
@@ -29,7 +28,7 @@
 
 .header__buttons-wrapper {
     display: flex;
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
 .header__buttons-wrapper > .button:first-child {
@@ -39,7 +38,7 @@
 .header__arrow {
     display: block;
     position: relative;
-    margin: 162px auto 0;
+    margin: 232px auto 0;
     width: 28px;
     height: 7px;
     cursor: pointer;
@@ -71,8 +70,11 @@
 
 @media (max-width: 1024px) {
     .header {
-        height: auto;
-        padding-bottom: 50px;
+        padding: 30px 0 50px;
+    }
+
+    .header__partners {
+        margin-top: 50px;
     }
 
     .header__partners > .link:not(:first-child) {
@@ -87,6 +89,10 @@
     .header__text,
     .header__buttons-wrapper {
         margin-top: 30px;
+    }
+
+    .header__arrow {
+        margin: 162px auto 0;
     }
 }
 
